Java 11 compliance